fix: page content not centered

--- a/src/layouts/main-layout.module.scss
+++ b/src/layouts/main-layout.module.scss
@@ -27,6 +27,7 @@
 .headerPart {
   display: flex;
   gap: 20px;
+  align-items: center;
 }
 
 .link {
